--- a/user_guide/css/agency.css
+++ b/user_guide/css/agency.css
@@ -444,12 +444,12 @@ body {
 
 /*MODAL EXERCICIOS-->TUTORIAL*/
 .content-section-a {
-    min-height: 140px;
+    min-height: 180px;
     padding-top: 10px;
     background-color: #f8f8f8;
 }
 .content-section-b {
-    min-height: 140px;
+    min-height: 180px;
     padding-top: 10px;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
@@ -459,13 +459,33 @@ body {
 }
 .tutorial-item-image {
   padding-left: 5px;
-  padding-top: 20px;
-  width: 50px;
-  height: 50px;
   position: absolute;
   background-color: #fed136;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
   text-align: center;
+}
+
+#title-exercicio{
+  text-align: center;
+}
+
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
+}
+
+.buttonFormulas{
+  float: right;
+  padding: 10px;
+  font-size: 18px;
+}
+
+#text-formula{
+  padding-top: 50px;
 }
