--- a/user_guide/css/agency.css
+++ b/user_guide/css/agency.css
@@ -532,3 +532,27 @@ body {
   background-color: #222222;
   border-color:  #222222;
 }
+
+.grayout {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: black;
+  opacity: 0.2; /* Real browsers */
+  filter: alpha(opacity = 20); /* MSIE */
+}
+
+.elemento_universo {
+  position: relative;
+  margin: 1px;
+}
+.elemento_universo_destacado {
+  padding: 2px;
+  background-color: #5cb85c;
+}
+.elemento_universo_ofuscado {
+  padding: 2px;
+}
